Update namespace and rename sln file

--- a/src/Umbraco.Community.SecretManager/Umbraco.Community.SecretManager.csproj
+++ b/src/Umbraco.Community.SecretManager/Umbraco.Community.SecretManager.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>net9.0</TargetFramework>
-		<RootNamespace>Umbraco_UIBuilder_KeyVault_Example</RootNamespace>
+		<RootNamespace>Umbraco.Community.SecretManager</RootNamespace>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
