--- a/examples/Umbraco.Community.SecretManager.Site.16.x/Umbraco.Community.SecretManager.Site.16.x.csproj
+++ b/examples/Umbraco.Community.SecretManager.Site.16.x/Umbraco.Community.SecretManager.Site.16.x.csproj
@@ -3,7 +3,7 @@
 		<TargetFramework>net9.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<RootNamespace>Umbraco_UIBuilder_KeyVault_Example.Site</RootNamespace>
+		<RootNamespace>Umbraco.Community.SecretManager.Site</RootNamespace>
 		<CompressionEnabled>false</CompressionEnabled>
 		<!-- Disable compression. E.g. for umbraco backoffice files. These files should be precompressed by node and not let dotnet handle it -->
 	</PropertyGroup>
