Update Umbraco Version

--- a/src/Umbraco.Community.SecretManager/Umbraco.Community.SecretManager.csproj
+++ b/src/Umbraco.Community.SecretManager/Umbraco.Community.SecretManager.csproj
@@ -5,12 +5,13 @@
 		<RootNamespace>Umbraco.Community.SecretManager</RootNamespace>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<UmbracoCmsPackageVersion>[16.0.0, 17.0.0)</UmbracoCmsPackageVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Umbraco.Cms.Core" Version="16.1.1" />
-		<PackageReference Include="Umbraco.Cms.Web.Common" Version="16.1.1" />
-		<PackageReference Include="Umbraco.UIBuilder.Startup" Version="16.0.3" />
+		<PackageReference Include="Umbraco.Cms.Core" Version="$(UmbracoCmsPackageVersion)" />
+		<PackageReference Include="Umbraco.Cms.Web.Common" Version="$(UmbracoCmsPackageVersion)" />
+		<PackageReference Include="Umbraco.UIBuilder.Startup" Version="$(UmbracoCmsPackageVersion)" />
 		<PackageReference Include="Azure.Identity" Version="1.12.0" />
 		<PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.2.1" />
 	</ItemGroup>
