Add package information

--- a/src/Umbraco.Community.SecretManager/Umbraco.Community.SecretManager.csproj
+++ b/src/Umbraco.Community.SecretManager/Umbraco.Community.SecretManager.csproj
@@ -8,6 +8,24 @@
 		<UmbracoCmsPackageVersion>[16.0.0, 17.0.0)</UmbracoCmsPackageVersion>
 	</PropertyGroup>
 
+	<PropertyGroup>
+		<Version>1.0.0-beta1</Version>
+		<PackageId>Umbraco.Community.SecretManager</PackageId>
+		<Product>Umbraco.Community.SecretManager</Product>
+		<Title>Umbraco.Community.SecretManager</Title>
+		<Description>Azure Key Vault Secret Manager for Umbraco CMS</Description>
+		<Authors>Erik-Jan Westendorp</Authors>
+		<PackageTags>umbraco plugin package azure keyvault secret-manager</PackageTags>
+		<PackageProjectUrl>https://github.com/erikjanwestendorp/Umbraco.Community.SecretManager</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/erikjanwestendorp/Umbraco.Community.SecretManager</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageLicenseFile>LICENSE</PackageLicenseFile>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<None Include="..\..\LICENSE" Pack="true" PackagePath="\" />
+	</ItemGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Umbraco.Cms.Core" Version="$(UmbracoCmsPackageVersion)" />
 		<PackageReference Include="Umbraco.Cms.Web.Common" Version="$(UmbracoCmsPackageVersion)" />
