Add Webhook Provider

--- a/examples/Umbraco.Community.SecretManager.Site.16.x/Umbraco.Community.SecretManager.Site.16.x.csproj
+++ b/examples/Umbraco.Community.SecretManager.Site.16.x/Umbraco.Community.SecretManager.Site.16.x.csproj
@@ -29,6 +29,7 @@
 		<!-- Remove RazorCompileOnBuild and RazorCompileOnPublish when not using ModelsMode InMemoryAuto -->
 		<RazorCompileOnBuild>false</RazorCompileOnBuild>
 		<RazorCompileOnPublish>false</RazorCompileOnPublish>
+		<UserSecretsId>677c19bc-176c-4932-980e-5bcdf1a4505e</UserSecretsId>
 	</PropertyGroup>
 
 </Project>
