Configure DateTime format and Culture

--- a/examples/Umbraco.Community.SecretManager.Site.16.x/appsettings.Development.json
+++ b/examples/Umbraco.Community.SecretManager.Site.16.x/appsettings.Development.json
@@ -29,6 +29,8 @@
   },
   "SecretManager": {
     "EnableUmbracoUiBuilder": true,
-    "FirstRun": "0 6 * * *"
+    "FirstRun": "0 6 * * *",
+    "DateTimeFormat": "MMMM d, yyyy",
+    "Culture": "en-US"
   }
 }
