--- a/examples/Umbraco.Community.SecretManager.Site.16.x/appsettings.Development.json
+++ b/examples/Umbraco.Community.SecretManager.Site.16.x/appsettings.Development.json
@@ -28,9 +28,12 @@
     }
   },
   "SecretManager": {
-    "EnableUmbracoUiBuilder": true,
-    "FirstRun": "23 13 * * *",
-    "DateTimeFormat": "MMMM d, yyyy",
-    "Culture": "en-US"
+    "Recurring": {
+      "FirstRun": "11 20 * * *"
+    },
+    "UIBuilder": {
+      "DateTimeFormat": "MMMM d, yyyy",
+      "Culture": "en-US"
+    }
   }
 }
