--- a/src/Umbraco.Community.SecretManager/Umbraco.Community.SecretManager.csproj
+++ b/src/Umbraco.Community.SecretManager/Umbraco.Community.SecretManager.csproj
@@ -33,4 +33,8 @@
 		<PackageReference Include="Azure.Identity" Version="1.12.0" />
 		<PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.2.1" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Umbraco.Community.SecretManager.Common\Umbraco.Community.SecretManager.Common.csproj" />
+	</ItemGroup>
 </Project>
