Add package info

--- a/src/Umbraco.Community.SecretManager.Common/Umbraco.Community.SecretManager.Common.csproj
+++ b/src/Umbraco.Community.SecretManager.Common/Umbraco.Community.SecretManager.Common.csproj
@@ -1,10 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net9.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
+
+	<PropertyGroup>
+		<Version>1.0.0-beta1</Version>
+		<PackageId>Umbraco.Community.SecretManager.Common</PackageId>
+		<Product>Umbraco.Community.SecretManager.Common</Product>
+		<Title>Umbraco.Community.SecretManager.Common</Title>
+		<Description>Contains the common files for Umbraco.Community.SecretManager</Description>
+		<Authors>Erik-Jan Westendorp</Authors>
+		<PackageTags>umbraco plugin package azure keyvault secret-manager</PackageTags>
+		<PackageProjectUrl>https://github.com/erikjanwestendorp/Umbraco.Community.SecretManager</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/erikjanwestendorp/Umbraco.Community.SecretManager</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+	</PropertyGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Azure.Identity" Version="1.12.0" />
 		<PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.2.1" />
