--- a/src/Umbraco.Community.SecretManager.UIBuilder/Umbraco.Community.SecretManager.UIBuilder.csproj
+++ b/src/Umbraco.Community.SecretManager.UIBuilder/Umbraco.Community.SecretManager.UIBuilder.csproj
@@ -7,6 +7,19 @@
 		<UmbracoCmsPackageVersion>[16.0.0, 17.0.0)</UmbracoCmsPackageVersion>
 	</PropertyGroup>
 
+	<PropertyGroup>
+		<Version>1.0.0-beta1</Version>
+		<PackageId>Umbraco.Community.SecretManager.UIBuilder</PackageId>
+		<Product>Umbraco.Community.SecretManager.UIBuilder</Product>
+		<Title>Umbraco.Community.SecretManager.UIBuilder</Title>
+		<Description>Contains common files for adding UI to Umbraco.Community.SecretManager</Description>
+		<Authors>Erik-Jan Westendorp</Authors>
+		<PackageTags>umbraco plugin package azure keyvault secret-manager</PackageTags>
+		<PackageProjectUrl>https://github.com/erikjanwestendorp/Umbraco.Community.SecretManager</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/erikjanwestendorp/Umbraco.Community.SecretManager</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+	</PropertyGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Umbraco.UIBuilder.Startup" Version="$(UmbracoCmsPackageVersion)" />
 	</ItemGroup>
