Add package icon

--- a/src/Umbraco.Community.SecretManager.Common/Umbraco.Community.SecretManager.Common.csproj
+++ b/src/Umbraco.Community.SecretManager.Common/Umbraco.Community.SecretManager.Common.csproj
@@ -7,7 +7,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<Version>1.0.0-beta3</Version>
+		<Version>1.0.0-beta4</Version>
 		<PackageId>Umbraco.Community.SecretManager.Common</PackageId>
 		<Product>Umbraco.Community.SecretManager.Common</Product>
 		<Title>Umbraco.Community.SecretManager.Common</Title>
@@ -16,8 +16,13 @@
 		<PackageTags>umbraco plugin package azure keyvault secret-manager</PackageTags>
 		<PackageProjectUrl>https://github.com/erikjanwestendorp/Umbraco.Community.SecretManager</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/erikjanwestendorp/Umbraco.Community.SecretManager</RepositoryUrl>
+		<PackageIcon>icon-128x128.png</PackageIcon>
 		<RepositoryType>git</RepositoryType>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<None Include=".\..\assets\icon-128x128.png" Pack="true" PackagePath="\" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Azure.Identity" Version="1.12.0" />
