--- a/src/Umbraco.Community.SecretManager.UIBuilder/Umbraco.Community.SecretManager.UIBuilder.csproj
+++ b/src/Umbraco.Community.SecretManager.UIBuilder/Umbraco.Community.SecretManager.UIBuilder.csproj
@@ -8,7 +8,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<Version>1.0.0-beta3</Version>
+		<Version>1.0.0-beta4</Version>
 		<PackageId>Umbraco.Community.SecretManager.UIBuilder</PackageId>
 		<Product>Umbraco.Community.SecretManager.UIBuilder</Product>
 		<Title>Umbraco.Community.SecretManager.UIBuilder</Title>
@@ -17,8 +17,13 @@
 		<PackageTags>umbraco plugin package azure keyvault secret-manager</PackageTags>
 		<PackageProjectUrl>https://github.com/erikjanwestendorp/Umbraco.Community.SecretManager</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/erikjanwestendorp/Umbraco.Community.SecretManager</RepositoryUrl>
+		<PackageIcon>icon-128x128.png</PackageIcon>
 		<RepositoryType>git</RepositoryType>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<None Include=".\..\assets\icon-128x128.png" Pack="true" PackagePath="\" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Umbraco.UIBuilder.Startup" Version="$(UmbracoCmsPackageVersion)" />
