--- a/src/Umbraco.Community.SecretManager/Umbraco.Community.SecretManager.csproj
+++ b/src/Umbraco.Community.SecretManager/Umbraco.Community.SecretManager.csproj
@@ -9,7 +9,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<Version>1.0.0-beta3</Version>
+		<Version>1.0.0-beta4</Version>
 		<PackageId>Umbraco.Community.SecretManager</PackageId>
 		<Product>Umbraco.Community.SecretManager</Product>
 		<Title>Umbraco.Community.SecretManager</Title>
@@ -18,11 +18,13 @@
 		<PackageTags>umbraco plugin package azure keyvault secret-manager</PackageTags>
 		<PackageProjectUrl>https://github.com/erikjanwestendorp/Umbraco.Community.SecretManager</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/erikjanwestendorp/Umbraco.Community.SecretManager</RepositoryUrl>
+		<PackageIcon>icon-128x128.png</PackageIcon>
 		<RepositoryType>git</RepositoryType>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
 	</PropertyGroup>
 
 	<ItemGroup>
+		<None Include="..\..\assets\icon-128x128.png" Pack="true" PackagePath="\" />
 		<None Include="..\..\LICENSE" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
