--- a/src/Umbraco.Community.SecretManager.Common/Umbraco.Community.SecretManager.Common.csproj
+++ b/src/Umbraco.Community.SecretManager.Common/Umbraco.Community.SecretManager.Common.csproj
@@ -21,7 +21,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<None Include=".\..\assets\icon-128x128.png" Pack="true" PackagePath="\" />
+		<None Include="..\..\assets\icon-128x128.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 	<ItemGroup>
