--- a/src/Umbraco.Community.SecretManager.UIBuilder/Umbraco.Community.SecretManager.UIBuilder.csproj
+++ b/src/Umbraco.Community.SecretManager.UIBuilder/Umbraco.Community.SecretManager.UIBuilder.csproj
@@ -22,7 +22,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<None Include=".\..\assets\icon-128x128.png" Pack="true" PackagePath="\" />
+		<None Include="..\..\assets\icon-128x128.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 	<ItemGroup>
