Add package readme

--- a/src/Umbraco.Community.SecretManager/Umbraco.Community.SecretManager.csproj
+++ b/src/Umbraco.Community.SecretManager/Umbraco.Community.SecretManager.csproj
@@ -20,11 +20,13 @@
 		<RepositoryUrl>https://github.com/erikjanwestendorp/Umbraco.Community.SecretManager</RepositoryUrl>
 		<PackageIcon>icon-128x128.png</PackageIcon>
 		<RepositoryType>git</RepositoryType>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<None Include="..\..\assets\icon-128x128.png" Pack="true" PackagePath="\" />
+		<None Include="README.md" Pack="true" PackagePath="\" />
 		<None Include="..\..\LICENSE" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
